Fix html render issue with truncatewords_html

--- a/adBridge/static/css/style.css
+++ b/adBridge/static/css/style.css
@@ -27,3 +27,72 @@
     height: 100vh;
     padding: 20px;
 }
+
+.trix-editor {
+    width: 100%;
+}
+
+.trix-editor h1 {
+    font-size: 1.25rem !important;
+    line-height: 1.25rem !important;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.trix-editor a:not(.no-underline) {
+    text-decoration: underline;
+}
+
+.trix-editor a:visited {
+    color: green;
+} 
+
+.trix-editor ul {
+    list-style-type: disc;
+    padding-left: 1rem;
+}
+
+.trix-editor ol {
+    list-style-type: decimal;
+    padding-left: 1rem;
+}
+
+.trix-editor pre {
+    display: inline-block;
+    width: 100%;
+    vertical-align: top;
+    font-family: monospace;
+    font-size: 1.5em;
+    padding: 0.5em;
+    white-space: pre;
+    background-color: #eee;
+    overflow-x: auto;
+}
+
+.trix-editor blockquote {
+    border-left: 0.3em solid #ccc;
+    margin-left: 0.3em;
+    padding-left: 0.6em;
+}
+
+.description-box {
+    margin: 1rem auto 0;
+}
+
+.description-box p {
+    margin-bottom: 1rem;
+}
+
+.description-box ul {
+    list-style-type: disc;
+    padding-left: 1rem;
+}
+
+.description-box ol {
+    list-style-type: decimal;
+    padding-left: 1rem;
+}
+
+.description-box strong {
+    font-weight: bold;
+}
